[fix] address the publication button sticking out issue

--- a/src/app/(pages)/pages.module.css
+++ b/src/app/(pages)/pages.module.css
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 5rem;
+  /* gap: 3rem; */
   background: #ffffff;
   position: relative;
 }
@@ -185,5 +185,7 @@
     justify-content: center;
     padding: 0.5rem 0.8rem;
     font-size: 0.75rem;
+    flex-shrink: 0;
+    white-space: nowrap;
   }
 }
